# ai-proxy-server

./: README.md
api/: chat.js  vercel.json
skywatcher/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SUBMISSION_CHECKLIST.md  WRITEUP.md  docker-compose.yml  pyproject.toml
skywatcher/docs/: VIDEO_SCRIPT.md
skywatcher/skywatcher/: __init__.py  __main__.py  cli.py  config.py
skywatcher/skywatcher/agents/: __init__.py  coordinator.py  runner.py  specialists.py
skywatcher/skywatcher/mcp_server/: __init__.py  server.py
skywatcher/skywatcher/tools/: __init__.py  celestrak.py  security.py  sky_math.py
skywatcher/tests/: test_tools.py
